--- a/app/src/main/res/layout/historic_given_feedback_card.xml
+++ b/app/src/main/res/layout/historic_given_feedback_card.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.45">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image_given"
             android:layout_width="100dp"
             android:layout_height="100dp"
