--- a/app/src/main/res/layout/fragment_add_user_review.xml
+++ b/app/src/main/res/layout/fragment_add_user_review.xml
@@ -8,6 +8,37 @@
     android:layout_marginTop="50dp"
     android:background="@android:color/transparent">
 
+    <!-- Title section at the top -->
+    <LinearLayout
+        android:id="@+id/title_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Static part of the title -->
+        <TextView
+            android:id="@+id/title_avaliar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/league_spartan_medium"
+            android:text="Avaliar"
+            android:textColor="#25183E"
+            android:textSize="30sp"/>
+
+        <!-- Dynamic username part of the title -->
+        <TextView
+            android:id="@+id/title_usertoreview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/league_spartan_medium"
+            android:textColor="#CB3086"
+            android:textSize="30sp"/>
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -16,7 +47,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:fillViewport="true">
-
 
         <LinearLayout
             android:layout_width="match_parent"
