--- a/app/src/main/res/layout/fragment_leaderboards.xml
+++ b/app/src/main/res/layout/fragment_leaderboards.xml
@@ -7,7 +7,15 @@
     android:layout_marginTop="70dp"
     tools:context=".ui.ranking.LeaderboardsFragment">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible" />
+
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,8 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="vertical"
-            android:layout_marginTop="65dp">
+            android:orientation="vertical">
 
             <!-- Top categories title -->
             <TextView
@@ -41,7 +48,7 @@
                 app:cardCornerRadius="80dp"
                 app:cardElevation="6dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/leaderboards_initiative_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -49,7 +56,7 @@
                     android:layout_marginStart="10dp"
                     android:contentDescription="@string/profile_photo_content_desc"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/profile_default_image"/>
+                    android:src="@drawable/profile_default_image" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -75,19 +82,19 @@
                         android:fontFamily="@font/league_spartan_medium"
                         android:text="@string/iniciativa__"
                         android:textColor="#007CBA"
-                        android:textSize="27sp"/>
+                        android:textSize="27sp" />
 
                     <RatingBar
                         android:id="@+id/rating_iniciativa"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:progressTint="@color/yellow_star"
                         android:layout_marginStart="-50dp"
                         android:isIndicator="true"
                         android:numStars="5"
-                        android:stepSize="0.1"
+                        android:progressTint="@color/yellow_star"
                         android:scaleX="0.6"
-                        android:scaleY="0.6" />
+                        android:scaleY="0.6"
+                        android:stepSize="0.1" />
                 </LinearLayout>
 
                 <ImageView
@@ -98,7 +105,7 @@
                     android:layout_marginStart="330dp"
                     android:contentDescription="@string/initiative_icon"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/icon_initiative"/>
+                    android:src="@drawable/icon_initiative" />
 
             </androidx.cardview.widget.CardView>
 
@@ -113,7 +120,7 @@
                 app:cardCornerRadius="80dp"
                 app:cardElevation="6dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/leaderboards_collaboration_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -147,19 +154,19 @@
                         android:fontFamily="@font/league_spartan_medium"
                         android:text="Colaboração"
                         android:textColor="#007CBA"
-                        android:textSize="27sp"/>
+                        android:textSize="27sp" />
 
                     <RatingBar
                         android:id="@+id/rating_colaboracao"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:progressTint="@color/yellow_star"
                         android:layout_marginStart="-50dp"
-                        android:numStars="5"
                         android:isIndicator="true"
-                        android:stepSize="0.1"
+                        android:numStars="5"
+                        android:progressTint="@color/yellow_star"
                         android:scaleX="0.6"
-                        android:scaleY="0.6" />
+                        android:scaleY="0.6"
+                        android:stepSize="0.1" />
                 </LinearLayout>
 
                 <ImageView
@@ -184,7 +191,7 @@
                 app:cardCornerRadius="80dp"
                 app:cardElevation="6dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/leaderboards_commitment_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -218,16 +225,16 @@
                         android:fontFamily="@font/league_spartan_medium"
                         android:text="Conhecimento"
                         android:textColor="#007CBA"
-                        android:textSize="27sp"/>
+                        android:textSize="27sp" />
 
                     <RatingBar
                         android:id="@+id/rating_conhecimento"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:progressTint="@color/yellow_star"
                         android:layout_marginStart="-50dp"
                         android:isIndicator="true"
                         android:numStars="5"
+                        android:progressTint="@color/yellow_star"
                         android:scaleX="0.6"
                         android:scaleY="0.6" />
                 </LinearLayout>
@@ -254,7 +261,7 @@
                 app:cardCornerRadius="80dp"
                 app:cardElevation="6dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/leaderboards_communication_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -288,16 +295,16 @@
                         android:fontFamily="@font/league_spartan_medium"
                         android:text="@string/comunica_o__"
                         android:textColor="#007CBA"
-                        android:textSize="27sp"/>
+                        android:textSize="27sp" />
 
                     <RatingBar
                         android:id="@+id/rating_responsabilidade"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:progressTint="@color/yellow_star"
                         android:layout_marginStart="-50dp"
-                        android:numStars="5"
                         android:isIndicator="true"
+                        android:numStars="5"
+                        android:progressTint="@color/yellow_star"
                         android:scaleX="0.6"
                         android:scaleY="0.6" />
                 </LinearLayout>
@@ -318,13 +325,13 @@
                 android:id="@+id/best_category_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="15dp"
-                android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/league_spartan_medium"
                 android:text="@string/destaque_em_todas_as_categorias"
                 android:textColor="#CB3086"
-                android:textSize="27sp"/>
+                android:textSize="27sp" />
 
             <!-- Best employee card -->
             <androidx.cardview.widget.CardView
@@ -337,7 +344,7 @@
                 app:cardCornerRadius="80dp"
                 app:cardElevation="6dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/all_categories_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -372,11 +379,11 @@
                         android:id="@+id/all_categories_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
                         android:fontFamily="@font/league_spartan_medium"
                         android:text="4.8"
                         android:textColor="#007CBA"
-                        android:layout_marginEnd="10dp"
-                        android:textSize="28sp"/>
+                        android:textSize="28sp" />
 
                     <!-- Star Icon -->
                     <ImageView
@@ -384,7 +391,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:contentDescription="@string/star_icon"
-                        android:src="@drawable/ic_star_yellow"/>
+                        android:src="@drawable/ic_star_yellow" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -399,7 +406,7 @@
                 android:fontFamily="@font/league_spartan_medium"
                 android:text="Maiores destaques mensais"
                 android:textColor="#CB3086"
-                android:textSize="27sp"/>
+                android:textSize="27sp" />
 
             <!-- Best employee list RecyclerView -->
             <androidx.recyclerview.widget.RecyclerView
