--- a/app/src/main/res/layout/item_card_employee.xml
+++ b/app/src/main/res/layout/item_card_employee.xml
@@ -46,16 +46,14 @@
             android:text="6"
             android:textColor="#000000"
             android:textSize="22sp"
-            android:fontFamily="@font/league_spartan_medium"
-            android:layout_marginEnd="8dp"/>
+            android:fontFamily="@font/league_spartan_medium"/>
 
         <!-- Icon Image on the right -->
         <ImageView
             android:id="@+id/icon_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="20dp"
             android:src="@drawable/icon_coffee"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
