--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,7 +43,7 @@
         android:id="@+id/titleCreateAccount"
         android:layout_width="253dp"
         android:layout_height="57dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/create_account_title"
         android:textColor="#CC0676"
@@ -56,8 +56,8 @@
     <!-- Name Input Field -->
     <EditText
         android:id="@+id/nameInput"
-        android:layout_width="347dp"
-        android:layout_height="45dp"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
@@ -69,15 +69,14 @@
         android:textColorHint="#80999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleCreateAccount" />
 
     <!-- Surname Input Field -->
     <EditText
         android:id="@+id/surnameInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
@@ -89,7 +88,6 @@
         android:textColorHint="#80999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameInput" />
 
@@ -99,7 +97,7 @@
         android:layout_width="346dp"
         android:layout_height="47dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
@@ -109,15 +107,14 @@
         android:textColorHint="#80999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/surnameInput" />
 
     <!-- Password Input Field -->
     <EditText
         android:id="@+id/passwordInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
@@ -129,17 +126,16 @@
         android:textColorHint="#80999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailInput" />
 
     <!-- Password confirmation Input Field -->
     <EditText
         android:id="@+id/passwordConfirmationInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
@@ -149,17 +145,16 @@
         android:textColorHint="#80999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailInput" />
+        app:layout_constraintTop_toBottomOf="@id/passwordInput" />
 
     <!-- Job Input Field -->
     <EditText
         android:id="@+id/jobInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
@@ -169,9 +164,8 @@
         android:textColorHint="#80999999"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameInput" />
+        app:layout_constraintTop_toBottomOf="@id/passwordConfirmationInput" />
 
     <!-- Register button -->
     <Button
@@ -179,7 +173,7 @@
         android:layout_width="344dp"
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_with_shadow"
         android:fontFamily="@font/league_spartan_medium"
